force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <description>Hold various types of relation between 2 Contacts (or personaccounts)</description>
    <label>Relatie</label>
    <nameField>
        <displayFormat>REL-{0000000000}</displayFormat>
        <label>Relationship Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>