force-app/main/default/objects/Relationship__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>The relationship is active if the start date is in the past and the end date is empty or in the future</description>
    <formula>IF(
AND(Start_Date__c &lt;= TODAY(),
OR(End_Date__c &gt;= TODAY(),
ISBLANK(End_Date__c)
)
), True, False)</formula>
    <inlineHelpText>The relationship is active if the start date is in the past and the end date is empty or in the future</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>