force-app/main/default/objects/Relationship__c/fields/Primary_Relation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Primary account/contact for the relation</description>
    <label>Primary Relation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Primary_Account_In_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>