force-app/main/default/objects/Relationship__c/fields/Primary_Relation_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relation_Name__c</fullName>
    <description>Describes the relation from the primary contact</description>
    <formula>&quot;Is &quot;&amp;TEXT(Type__c)&amp;&quot; voor &quot;&amp; 
IF(
	Subsidiary_Relation__r.IsPersonAccount, 
	Subsidiary_Relation__r.FirstName&amp;&quot; &quot;&amp;
	IF(
		NOT(ISBLANK(Subsidiary_Relation__r.MiddleName)),
		Subsidiary_Relation__r.MiddleName&amp;&quot; &quot;&amp;Subsidiary_Relation__r.LastName,
		Subsidiary_Relation__r.LastName
	),
	Subsidiary_Relation__r.Name
)</formula>
    <inlineHelpText>Describes the relation from the primary contact</inlineHelpText>
    <label>Primary Relation Name</label>
    <type>Text</type>
</CustomField>