force-app/main/default/objects/Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the relationship</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>