force-app/main/default/objects/Relationship__c/fields/Subsidiary_Account_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Account_Full_Name__c</fullName>
    <formula>Subsidiary_Relation__r.Full_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Account Full Name</label>
    <type>Text</type>
</CustomField>