force-app/main/default/objects/Relationship__c/fields/Subsidiary_Relation__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Relation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Subsidiary personaccount or contact in this relation</description>
    <label>Subsidiary Relation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Subsidiary_Account_In_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>