force-app/main/default/objects/Relationship__c/fields/Subsidiary_Relation_Name__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Relation_Name__c</fullName>
    <description>Subsidiary label for this relation</description>
    <formula>&quot;Valt onder &quot;&amp;TEXT(Type__c)&amp;&quot; &quot;&amp;
IF(
	Primary_Relation__r.IsPersonAccount, 
	Primary_Relation__r.FirstName&amp;&quot; &quot;&amp;
	IF(
		NOT(ISBLANK(Primary_Relation__r.MiddleName)),
		Primary_Relation__r.MiddleName&amp;&quot; &quot;&amp;Primary_Relation__r.LastName,
		Primary_Relation__r.LastName
	),
	Primary_Relation__r.Name
)</formula>
    <inlineHelpText>Subsidiary label for this relation</inlineHelpText>
    <label>Subsidiary Relation Name</label>
    <type>Text</type>
</CustomField>