force-app/main/default/objects/Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of this relation</description>
    <inlineHelpText>Type of this relation</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHV</fullName>
                <label>Schuldhulpverlener</label>
            </value>
            <value>
                <fullName>BWI</fullName>
                <label>Bewindvoerder</label>
            </value>
            <value>
                <fullName>MLZ</fullName>
                <label>Mantelzorger</label>
            </value>
            <value>
                <fullName>MTW</fullName>
                <label>Maatschappelijk Werker</label>
            </value>
            <value>
                <fullName>CUR</fullName>
                <label>Curator</label>
            </value>
            <value>
                <fullName>ERG</fullName>
                <label>Erfgenaam</label>
            </value>
            <value>
                <fullName>advct</fullName>
                <label>Advocaat</label>
            </value>
            <value>
                <fullName>DEU</fullName>
                <label>Deurwaarder</label>
            </value>
            <value>
                <fullName>extst</fullName>
                <label>Executeur-Testamentair</label>
            </value>
            <value>
                <fullName>exwgm</fullName>
                <label>Expert Wonen Gemeente</label>
            </value>
            <value>
                <fullName>mntrs</fullName>
                <label>Mentorschap</label>
            </value>
            <value>
                <fullName>swkgm</fullName>
                <label>Sociaal Wijkteam Gemeente</label>
            </value>
            <value>
                <fullName>tlkbd</fullName>
                <label>Tolk (Beëdigd)</label>
            </value>
            <value>
                <fullName>wkagn</fullName>
                <label>Wijkagent</label>
            </value>
            <value>
                <fullName>zrgin</fullName>
                <label>Zorginstelling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>