force-app/main/default/objects/Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Primary_Relation__c</columns>
    <columns>Primary_Relation_Name__c</columns>
    <columns>Subsidiary_Relation__c</columns>
    <columns>Subsidiary_Relation_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>