force-app/main/default/objects/Relationship__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Deduplication_Key__c</columns>
    <columns>Primary_Relation__c</columns>
    <columns>Primary_Relation_Name__c</columns>
    <columns>Subsidiary_Relation__c</columns>
    <columns>Subsidiary_Relation_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>